Fixes glider position on IE

--- a/sass/general.scss
+++ b/sass/general.scss
@@ -56,7 +56,10 @@ footer {
   img {
     position: absolute;
     bottom: $padding-default;
-    
+    margin-left: auto;
+    margin-right: auto;
+    left: 0;
+    right: 0;
   }
 }
 
